client_viten/src/app/admin/homepage-admin/homepage-admin.component.scss
.flexParent {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-wrap: nowrap;
  align-items: stretch;
}
.flexchild {
  flex: 1 1;
}
.alignCenter {
  text-align: center;
}
.alignRight {
  text-align: right;
}

.rightSide {
  display: inline-block;
  width: 75%;
}

.leftSide {
  display: inline-block;
  width: 25%;
}

.emptyArea {

  .loadingCircle {
    margin: 0 auto;
    margin-top: 60px;
  }
}

.selectedSurveyArea {
  .activeIcon {
    width: 1em;
    height: 1em;
    font-size: 3em;
  }
}

.center {
  margin: auto;
  height: 200px;
  margin-top: 150px;
  width: 50%;
  padding: 10px;
}

.surveyActiveIcon {
   color: #f44336;
   &.active {
      color: #A1E232;
  }

}
.visibility-text {
  margin: 0px;
  text-align: center;
}

md-card {
  position: relative;
}

.chip {
  display: inline-block;
  transform: scale(0.68);
  position: absolute;
  top: 27px;
  right: 65px;
  color: white;
  md-chip {
    outline: none;
  }
  .mat-accent {
    color: white;
  }
}

.activeToggle {
  display: inline-block;
  position: absolute;
  top: 75px;
  right: 14px;
}


div[md-dialog-actions] {
  button {
    margin-left: 10px;
    &:first-of-type {
      margin: 0;
    }
  }
}

.openInBrowser {
  vertical-align: middle;
}

.openInBrowserDiv {
  height: 36px;
}

